- Fix disabling submenu items in the menus (Artur Wieczorek).
- Fix wxEVT_TREE_STATE_IMAGE_CLICK generation (Antal).
- Fix wxDV_ROW_LINES in horizontally scrolled wxDataViewCtrl.
- Fix RegisterHotKey() with negative IDs (troelsk).
- Fix event object type for wxEVT_SPINCTRL events.
- Fix bug if wxToolBar tool was deleted from its own handler (Artur Wieczorek).

wxOSX:

- Compilation fix for wxWebView under 10.10.
- Fix conversion of wxBitmap to wxImage in 64 bit builds.
- Fix length of text in wxTextDataObject.
- Fix using wxHTTP and wxFTP from worker thread.
- Fix wxFileDialog::GetFilterIndex() for file open dialogs (phsilva).
- Fix wxSearchCtrl appearance under 10.10 (John Roberts).
- Fix handling of "Cancel" button in wxSearchCtrl (John Roberts).
- Generate correct events for WXK_NUMPAD_ENTER (John Roberts).
- Fix handling of WXK_NUMPAD_ENTER in wxTextCtrl (John Roberts).
- Don't show wxDatePickerCtrl as being disabled when it isn't (John Roberts).
- Generate wxEVT_TEXT_ENTER for wxTE_PASSWORD controls too (mj_smoker).
- Send wxIconizeEvent when a window is iconized/restore (Rob Krakora).
- Use correct colour for disabled wxStaticText (sbrowne).
- Fix too large top and left margins inside wxStaticBox (sbrowne).
- Fix bottom margins sizes for several controls (sbrowne).
- Fix initial position of controls with layout insets (Tim Kosse).
- Don't allow pasting rich text in non-wxTE_RICH text controls (Tim Kosse).
- Fix printing all pages non-interactively (John Roberts).
- Fix custom paper support (tijsv).
- Return false from wxSound::Create()/IsOk() if the file doesn't exist.
- Fix scrolling behaviour of wxSearchCtrl (John Roberts).


3.0.2: (released 2014-10-06)
----------------------------

All:

- Fix silent data loss in wx[F]File::Write(wxString) if conversion fails.
- Make wxString::FromCDouble() work when the global C++ locale is not the C one.
- Add support for "%V", "%G" and "%g" to wxDateTime::Format().

All (GUI):
